--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="container mt-5">
         <!-- Header -->
         <div class="jumbotron text-center">
-            <h1>Your Name</h1>
-            <p>Your Position or Tagline</p>
+            <h1>Wilson Quack</h1>
+            <p>Mechanical Engineering, National Taiwan University</p>
         </div>
 
         <!-- Tabs Navigation -->
-        <ul class="nav nav-underline" id="resumeTabs" role="tablist">
+        <ul class="nav nav-pills mb-3 " id="resumeTabs" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="basic-info-tab" data-toggle="tab" href="#basic-info" role="tab"
                     aria-controls="basic-info" aria-selected="true">Basic Information</a>
@@ -49,11 +49,11 @@
             <div class="tab-pane fade show active" id="basic-info" role="tabpanel" aria-labelledby="basic-info-tab">
                 <div class="mt-4">
                     <h3>Basic Information</h3>
-                    <ul class="list-unstyled">
-                        <li><strong>Email:</strong> your-email@example.com</li>
-                        <li><strong>Phone:</strong> 123-456-7890</li>
-                        <li><strong>Address:</strong> 123 Main St, City, Country</li>
-                    </ul>
+                    <div class="mt-3">
+                        <ul class="list-unstyled">
+                            <li><strong>Email:</strong> quackwilson@gmail.com</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
@@ -62,10 +62,24 @@
                 <div class="mt-4">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <h5>School Name</h5>
-                            <p><strong>Degree:</strong> Bachelor's/Master's/PhD</p>
-                            <p><strong>Major:</strong> Your Major</p>
-                            <p><strong>Years:</strong> Start Year - End Year</p>
+                            <h3>National Taiwan University</h3>
+                            <div class="mt-3">
+                                <p><strong>Degree:</strong> The degree of Bachelor of Science in Engineering</p>
+                                <p><strong>Major:</strong> Mechanical Engineering</p>
+                                <p><strong>Years:</strong> 2019 Fall - 2023 Spring</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mt-4">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h3>Foon Yew High School Kulai</h3>
+                            <div class="mt-3">
+                                <p><strong>Degree:</strong> High School</p>
+                                <p><strong>Major:</strong> Science</p>
+                                <p><strong>Years:</strong> 2013 Spring - 2018 Winter</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -76,11 +90,28 @@
                 <div class="mt-4">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <h5>Company Name</h5>
-                            <p><strong>Position:</strong> Your Position</p>
-                            <p><strong>Years:</strong> Start Year - End Year</p>
-                            <p><strong>Description:</strong> Brief description of your responsibilities and
-                                achievements.</p>
+                            <h3>Company Name</h3>
+                            <div class="mt-3">
+                                <p><strong>Position:</strong> Your Position</p>
+                                <p><strong>Years:</strong> Start Year - End Year</p>
+                                <p><strong>Description:</strong> Brief description of your responsibilities and
+                                    achievements.</p>
+                            </div>
+
+                        </li>
+                    </ul>
+                </div>
+                <div class="mt-4">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h3>Company Name</h3>
+                            <div class="mt-3">
+                                <p><strong>Position:</strong> Your Position</p>
+                                <p><strong>Years:</strong> Start Year - End Year</p>
+                                <p><strong>Description:</strong> Brief description of your responsibilities and
+                                    achievements.</p>
+                            </div>
+
                         </li>
                     </ul>
                 </div>
@@ -90,13 +121,19 @@
             <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
                 <div class="mt-4">
                     <div class="card mb-4">
+                        <h5 class="card-header">Featured</h5>
                         <div class="card-body">
-                            This is some text within a card body.
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
                         </div>
                     </div>
                     <div class="card mb-4">
+                        <h5 class="card-header">Featured</h5>
                         <div class="card-body">
-                            This is some text within a card body.
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
                         </div>
                     </div>
                 </div>
