--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Wilson Quack</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -151,7 +151,25 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#projectDetails1">
+                                            Details
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#projectDetails2">
+                                            Details
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -162,18 +180,10 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#projectDetails3">
+                                            Details
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -181,12 +191,59 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="modal fade" id="projectDetails1" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, aspernatur adipisci sunt
+                            pariatur reiciendis qui hic fuga odit eius libero aut numquam aliquam fugiat tenetur!
+                            Consectetur necessitatibus odio exercitationem tempora!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="projectDetails2" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, aspernatur adipisci sunt
+                            pariatur reiciendis qui hic fuga odit eius libero aut numquam aliquam fugiat tenetur!
+                            Consectetur necessitatibus odio exercitationem tempora!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade custom-modal" id="projectDetails3" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, aspernatur adipisci sunt
+                            pariatur reiciendis qui hic fuga odit eius libero aut numquam aliquam fugiat tenetur!
+                            Consectetur necessitatibus odio exercitationem tempora!</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Footer -->
         <footer class="text-center mt-5">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 Wilson Quack. All rights reserved.</p>
         </footer>
     </div>
 
@@ -194,6 +251,22 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+        const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
+        function toggleModalDarkMode() {
+            const modals = document.querySelectorAll('.modal');
+            modals.forEach(modal => {
+                if (prefersDarkScheme.matches) {
+                    modal.classList.add('dark-mode');
+                } else {
+                    modal.classList.remove('dark-mode');
+                }
+            });
+        }
+        window.onload = toggleModalDarkMode;
+        prefersDarkScheme.addEventListener('change', toggleModalDarkMode);
+    </script>
 </body>
 
 </html>
