--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <div class="mt-3">
                         <ul class="list-unstyled">
                             <li><strong>Email:</strong> quackwilson@gmail.com</li>
+                            <li><strong>LinkedIn:</strong> <span><a href="https://www.linkedin.com/in/wilson-quack-121745311" target="_blank">Wilson Quack</a></span></li>
                         </ul>
                     </div>
                 </div>
