--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wilson Quack</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
+    <link href="./asset/bootstrap-4.5.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./asset/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container mt-5">
-        <!-- Header -->
         <div class="jumbotron text-center">
             <h1>Wilson Quack</h1>
             <p>Mechanical Engineering, National Taiwan University</p>
         </div>
 
-        <!-- Tabs Navigation -->
         <ul class="nav nav-pills mb-3 " id="resumeTabs" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="basic-info-tab" data-toggle="tab" href="#basic-info" role="tab"
@@ -43,9 +39,7 @@
             </li>
         </ul>
 
-        <!-- Tabs Content -->
         <div class="tab-content" id="resumeTabsContent">
-            <!-- Basic Information -->
             <div class="tab-pane fade show active" id="basic-info" role="tabpanel" aria-labelledby="basic-info-tab">
                 <div class="mt-4">
                     <h3>Basic Information</h3>
@@ -58,7 +52,6 @@
                 </div>
             </div>
 
-            <!-- Education -->
             <div class="tab-pane fade" id="education" role="tabpanel" aria-labelledby="education-tab">
                 <div class="mt-4">
                     <ul class="list-group">
@@ -86,7 +79,6 @@
                 </div>
             </div>
 
-            <!-- Work Experience -->
             <div class="tab-pane fade" id="work-experience" role="tabpanel" aria-labelledby="work-experience-tab">
                 <div class="mt-4">
                     <ul class="list-group">
@@ -118,7 +110,6 @@
                 </div>
             </div>
 
-            <!-- Skills -->
             <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
                 <div class="mt-4">
                     <div class="card mb-4">
@@ -140,7 +131,6 @@
                 </div>
             </div>
 
-            <!-- Projects -->
             <div class="tab-pane fade" id="projects" role="tabpanel" aria-labelledby="projects-tab">
                 <div class="mt-4">
                     <div class="container text-center">
@@ -242,32 +232,16 @@
             </div>
         </div>
 
-        <!-- Footer -->
         <footer class="text-center mt-5">
             <p>&copy; 2024 Wilson Quack. All rights reserved.</p>
         </footer>
     </div>
 
-    <!-- jQuery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./asset/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
+    <scrpit src="./asset/js/index.js"></scrpit>
 
-    <script>
-        const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
-        function toggleModalDarkMode() {
-            const modals = document.querySelectorAll('.modal');
-            modals.forEach(modal => {
-                if (prefersDarkScheme.matches) {
-                    modal.classList.add('dark-mode');
-                } else {
-                    modal.classList.remove('dark-mode');
-                }
-            });
-        }
-        window.onload = toggleModalDarkMode;
-        prefersDarkScheme.addEventListener('change', toggleModalDarkMode);
-    </script>
 </body>
 
 </html>
