--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <a class="nav-link" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills"
                     aria-selected="false">Skills</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" id="projects-tab" data-toggle="tab" href="#projects" role="tab"
                     aria-controls="projects" aria-selected="false">Projects</a>
-            </li>
+            </li> -->
         </ul>
 
         <div class="tab-content" id="resumeTabsContent">
@@ -84,8 +84,8 @@
                                     animi doloribus harum repellendus cumque nostrum quo, numquam autem, repudiandae
                                     fuga accusamus?</p>
                             </div>
-                            <div class="card-line"></div>
-                            <div class="mt-3">
+                            <hr class="my-4">
+                            <div>
                                 <h5><strong>Advanced Power Research and Devlopment Center</strong> <span
                                         class="badge badge-secondary">2022/06 -
                                         2022/12</span></h5>
@@ -113,8 +113,8 @@
                                     </span></p>
 
                             </div>
-                            <div class="card-line"></div>
-                            <div class="mt-3">
+                            <hr class="my-4">
+                            <div>
                                 <h5><strong>Python Programming for Beginners</strong> <span
                                         class="badge badge-secondary">2022 Summer</span></h5>
                                 <p>Computer and Information Networking Center, National Taiwan University</p>
@@ -124,8 +124,8 @@
                                     animi doloribus harum repellendus cumque nostrum quo, numquam autem, repudiandae
                                     fuga accusamus?</p>
                             </div>
-                            <div class="card-line"></div>
-                            <div class="mt-3">
+                            <hr class="my-4">
+                            <div>
                                 <h5><strong>Frontend Programming</strong> <span class="badge badge-secondary">2022
                                         Spring</span></h5>
                                 <p>National Taiwan University</p>
@@ -159,27 +159,27 @@
             <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
                 <div class="mt-4">
                     <div class="card mb-4">
-                        <h5 class="card-header">Web Development</h5>
+                        <h5 class="card-header">Programming & Development</h5>
                         <div class="card-body">
                             <div>
-                                <h5 class="card-title">Frontend Programming</h5>
+                                <h5 class="card-title">Web Development</h5>
                                 <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero
                                     aut quisquam optio accusantium, aliquid, laborum, eveniet vel quas ipsa ratione
                                     provident corrupti! Consequatur laudantium, adipisci doloribus eos nam praesentium
                                     nemo.
                                 </p>
                             </div>
-                            <div class="card-line mt-3"></div>
-                            <div class="mt-4">
-                                <h5 class="card-title">Database Management</h5>
+                            <hr class="my-4">
+                            <div>
+                                <h5 class="card-title">Machine Learning Application</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
                                     perferendis, est dignissimos dolorem ipsam, autem sit eligendi nisi aut maiores
                                     sequi. Ipsa voluptatem odit sequi dolorum assumenda pariatur rem beatae!
                                 </p>
                             </div>
-                            <div class="card-line mt-3"></div>
-                            <div class="mt-4">
-                                <h5 class="card-title">Backend Development</h5>
+                            <hr class="my-4">
+                            <div>
+                                <h5 class="card-title">AR/VR Software Development</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et nulla,
                                     dolorum accusantium quam similique fugit laborum ab qui eligendi quas voluptatum
                                     nihil, ipsa labore expedita vitae fuga officia voluptas veritatis!
@@ -191,23 +191,23 @@
                         <h5 class="card-header">Machanical Engineering</h5>
                         <div class="card-body">
                             <div>
-                                <h5 class="card-title">Intelligence manufacturing</h5>
+                                <h5 class="card-title">Intelligence Manufacturing</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
                                     perferendis, est dignissimos dolorem ipsam, autem sit eligendi nisi aut maiores sequi.
                                     Ipsa voluptatem odit sequi dolorum assumenda pariatur rem beatae!
                                 </p>
                             </div>
-                            <div class="card-line mt-3"></div>
-                            <div class="mt-4">
+                            <hr class="my-4">
+                            <div>
                                 <h5 class="card-title">Mechanical Design and Analysis</h5>
                                 <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero aut
                                     quisquam optio accusantium, aliquid, laborum, eveniet vel quas ipsa ratione provident
                                     corrupti! Consequatur laudantium, adipisci doloribus eos nam praesentium nemo.
                                 </p>
                             </div>
-                            <div class="card-line mt-3"></div>
-                            <div class="mt-4">
-                                <h5 class="card-title">Mechatronic Engineering</h5>
+                            <hr class="my-4">
+                            <div>
+                                <h5 class="card-title">Mechatronic System Engineering</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
                                     perferendis, est dignissimos dolorem ipsam, autem sit eligendi nisi aut maiores sequi.
                                     Ipsa voluptatem odit sequi dolorum assumenda pariatur rem beatae!
@@ -229,7 +229,7 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails1">
                                             Details
                                         </button>
@@ -244,7 +244,7 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails2">
                                             Details
                                         </button>
@@ -258,7 +258,7 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails3">
                                             Details
                                         </button>
@@ -278,7 +278,7 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails1">
                                             Details
                                         </button>
@@ -293,7 +293,7 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails2">
                                             Details
                                         </button>
@@ -307,7 +307,7 @@
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up the bulk of the card's content.</p>
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails3">
                                             Details
                                         </button>
