--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                                 <h5><strong>智能感測與數位製造實驗室</strong> <span class="badge badge-secondary">2022/11 -
                                         2023/06</span></h5>
                                 <p>Department of Mechanical Engineering, National Taiwan University</p>
-                                <p><strong>Description:</strong></p>
+                                <!-- <p><strong>Description:</strong></p>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing
                                     elit. Sed ullam nostrum dignissimos quisquam natus alias error! Reiciendis dicta
                                     animi doloribus harum repellendus cumque nostrum quo, numquam autem, repudiandae
-                                    fuga accusamus?</p>
+                                    fuga accusamus?</p> -->
                             </div>
                             <hr class="my-4">
                             <div>
@@ -90,11 +90,11 @@
                                         class="badge badge-secondary">2022/06 -
                                         2022/12</span></h5>
                                 <p>Department of Mechanical Engineering, National Taiwan University</p>
-                                <p><strong>Description:</strong></p>
+                                <!-- <p><strong>Description:</strong></p>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing
                                     elit. Sed ullam nostrum dignissimos quisquam natus alias error! Reiciendis dicta
                                     animi doloribus harum repellendus cumque nostrum quo, numquam autem, repudiandae
-                                    fuga accusamus?</p>
+                                    fuga accusamus?</p> -->
                             </div>
                         </li>
                     </ul>
@@ -118,11 +118,11 @@
                                 <h5><strong>Python Programming for Beginners</strong> <span
                                         class="badge badge-secondary">2022 Summer</span></h5>
                                 <p>Computer and Information Networking Center, National Taiwan University</p>
-                                <p><strong>Description:</strong></p>
+                                <!-- <p><strong>Description:</strong></p>
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing
                                     elit. Sed ullam nostrum dignissimos quisquam natus alias error! Reiciendis dicta
                                     animi doloribus harum repellendus cumque nostrum quo, numquam autem, repudiandae
-                                    fuga accusamus?</p>
+                                    fuga accusamus?</p> -->
                             </div>
                             <hr class="my-4">
                             <div>
@@ -147,10 +147,11 @@
                                         2023/06</span></h5>
                                 <p>National Taiwan University</p>
                                 <p><strong>Description:</strong></p>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing
-                                    elit. Sed ullam nostrum dignissimos quisquam natus alias error! Reiciendis dicta
-                                    animi doloribus harum repellendus cumque nostrum quo, numquam autem, repudiandae
-                                    fuga accusamus?</p>
+                                <p>
+                                    1. Maintenance center equipment (computers, printers, routers): update and maintain operating systems, manage user behavior, and monitor systems;<br>
+                                    2. Operate 3D printing printers and laser engraving machines;<br>
+                                    3. Develop and maintain high-performance computing service web pages and backends: <a href="http://hpc.ntu.edu.tw">NTUHPC</a>.
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -159,58 +160,56 @@
             <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
                 <div class="mt-4">
                     <div class="card mb-4">
-                        <h5 class="card-header">Programming & Development</h5>
+                        <h5 class="card-header">Machanical Engineering</h5>
                         <div class="card-body">
                             <div>
-                                <h5 class="card-title">Web Development</h5>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero
-                                    aut quisquam optio accusantium, aliquid, laborum, eveniet vel quas ipsa ratione
-                                    provident corrupti! Consequatur laudantium, adipisci doloribus eos nam praesentium
-                                    nemo.
+                                <h5 class="card-title">Intelligence Manufacturing / IoT</h5>
+                                <p class="card-text">
+                                    1. Precision machinery measurement and optimization algorithms;<br>
+                                    2. Development and application of virtual reality and augmented reality in the factory;<br>
+                                    3. Use various mechanical components and electronic components to develop through microcomputers or evaluation board (Arduino, STM32, etc.).<br>
+                                    Certified by National Taiwan University:
+                                    <a href="./asset/img/skill_IM.pdf" target="_blank">Certificate</a>
                                 </p>
                             </div>
                             <hr class="my-4">
                             <div>
+                                <h5 class="card-title">Mechanical Design and Analysis</h5>
+                                <p class="card-text">
+                                    1. From zero to one mechanical design and development, with the concept of design for assembly to make machinery more efficient when assembled in the factory;<br>
+                                    2. Conduct finite element method analysis and fluid mechanics analysis on mechanical design, and evaluate feasibility.<br>
+                                    Tools: AutoCAD, Inventor, SolidWork, Ansys, ABAQUS, Pro/E, etc.<br>
+                                    Other: Finite element method, Computational Fluid Dynamics
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4">
+                        <h5 class="card-header">Programming & Software Development</h5>
+                        <div class="card-body">
+                            <div>
+                                <h5 class="card-title">Web Development</h5>
+                                <p class="card-text">
+                                    Frontend: HTML, CSS, Bootstrap; JavaScript, JQuery, react.js, vue.js<br>
+                                    Backend: PHP, Laravel, SQL (PostgreSQL, MySQL, etc.)<br>
+                                    Platform: AWS, Google Cloud, self-server (via WinSCP or SSH), etc.<br>
+                                    Other: Git
+                                </p>
+                            </div>
+                            <hr class="my-4">
+                            <!-- <div>
                                 <h5 class="card-title">Machine Learning Application</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
                                     perferendis, est dignissimos dolorem ipsam, autem sit eligendi nisi aut maiores
                                     sequi. Ipsa voluptatem odit sequi dolorum assumenda pariatur rem beatae!
                                 </p>
                             </div>
-                            <hr class="my-4">
+                            <hr class="my-4"> -->
                             <div>
                                 <h5 class="card-title">AR/VR Software Development</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et nulla,
-                                    dolorum accusantium quam similique fugit laborum ab qui eligendi quas voluptatum
-                                    nihil, ipsa labore expedita vitae fuga officia voluptas veritatis!
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card mb-4">
-                        <h5 class="card-header">Machanical Engineering</h5>
-                        <div class="card-body">
-                            <div>
-                                <h5 class="card-title">Intelligence Manufacturing</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-                                    perferendis, est dignissimos dolorem ipsam, autem sit eligendi nisi aut maiores sequi.
-                                    Ipsa voluptatem odit sequi dolorum assumenda pariatur rem beatae!
-                                </p>
-                            </div>
-                            <hr class="my-4">
-                            <div>
-                                <h5 class="card-title">Mechanical Design and Analysis</h5>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero aut
-                                    quisquam optio accusantium, aliquid, laborum, eveniet vel quas ipsa ratione provident
-                                    corrupti! Consequatur laudantium, adipisci doloribus eos nam praesentium nemo.
-                                </p>
-                            </div>
-                            <hr class="my-4">
-                            <div>
-                                <h5 class="card-title">Mechatronic System Engineering</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-                                    perferendis, est dignissimos dolorem ipsam, autem sit eligendi nisi aut maiores sequi.
-                                    Ipsa voluptatem odit sequi dolorum assumenda pariatur rem beatae!
+                                <p class="card-text">
+                                    Tools: C#, Unity3D, Vuforia Engine, Vuforia Studio<br>
+                                    Platform: Microsoft Hololens 2
                                 </p>
                             </div>
                         </div>
