--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <a class="nav-link" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills"
                     aria-selected="false">Skills</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" id="projects-tab" data-toggle="tab" href="#projects" role="tab"
                     aria-controls="projects" aria-selected="false">Projects</a>
-            </li> -->
+            </li>
         </ul>
 
         <div class="tab-content" id="resumeTabsContent">
@@ -169,7 +169,7 @@
                                     2. Development and application of virtual reality and augmented reality in the factory;<br>
                                     3. Use various mechanical components and electronic components to develop through microcomputers or evaluation board (Arduino, STM32, etc.).<br>
                                     Certified by National Taiwan University:
-                                    <a href="./asset/img/skill_IM.pdf" target="_blank">Certificate</a>
+                                    <a href="./asset/img/skills/skill_IM.pdf" target="_blank">Certificate</a>
                                 </p>
                             </div>
                             <hr class="my-4">
@@ -223,11 +223,10 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <img src="./asset/img/airformula/IMG_4026.JPG" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Formula Air 4</h5>
+                                        <p class="card-text">Develop a wind-driven car from scratch. The car must follow the trajectory and climb a 25-degree slope, and it is restricted to use aluminum alloy to make any parts of the car.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails1">
                                             Details
@@ -329,9 +328,13 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, aspernatur adipisci sunt
-                        pariatur reiciendis qui hic fuga odit eius libero aut numquam aliquam fugiat tenetur!
-                        Consectetur necessitatibus odio exercitationem tempora!</p>
+                    <div class="mt-3">
+                        <h5>Formula Air 4</h5>
+                        <p>Project Details: <span><a href="./asset/img/airformula/機工實務2021_FormulaAir_Final.pdf">PDF</a></span> / Report: <span><a href="./asset/img/airformula/機工實務2021_FormulaAir_Final.pdf">PDF</a></span></p>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="./asset/img/airformula/25.mp4"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
